# ai-automate-contro

./: .gitignore  AGENTS.md  README.md  cplan.py  main.py  pyproject.toml
config/: ai-services.json
docs/: README.md  文档架构示例.md
docs/architecture/: AI终端与交互式执行架构.md  AI终端提示词与上下文策略.md  AI节点设计.md  AI调试修复工作流.md  README.md  功能开发指导.md  大文件重构指南.md  执行线隔离与Plan类型设计.md  架构总览.md  架构示例.md  问题修复指导.md
docs/bug/: README.md  问题-0001-严格模式选择器冲突.md  问题-0002-循环体变量过早渲染.md  问题-0003-多页面改造后旧引用残留.md  问题-0004-模型节点超时与服务能力边界.md  问题模板.md
docs/develop/: AI协作开发规范.md  AI终端工具开发检查清单.md  README.md  Windows桌面能力清单.md  变更分组清单.md  安装指南.md  开发流程示例.md  桌面依赖安装说明.md  测试与验证说明.md  浏览器组件回归说明.md  运行说明.md
docs/functions/: AI能力设计.md  AI能力重构设计.md  Excel文件与表格处理Action设计.md  Excel表格处理Cookbook.md  HTTP客户端请求Action设计.md  README.md  功能设计示例.md  安全与日志策略.md  定时触发与计划调度设计.md  接口契约与权限矩阵.md  数据存储说明.md  数据库连接Action设计.md  本地命令CommandAction设计.md  核心功能设计.md  桌面Action与Runtime契约.md  桌面场景任务自动化设计.md  桌面复杂控件与视觉增强设计.md  桌面视觉定位设计.md  浏览器能力落地清单.md  跨平台电脑控制设计.md  跨平台电脑控制远期设计.md
docs/plans/: README.md  计划-0001-框架第二版建设.md  计划-0002-框架第三版建设.md  计划-0003-AI终端与交互式执行器重构.md  计划-0004-定时触发与计划调度落地.md  计划-0005-HTTP客户端请求Action落地.md  计划-0006-跨平台桌面自动化第二线落地.md  计划-0007-桌面复杂控件与视觉定位增强.md  计划-0008-桌面场景任务自动化落地.md  计划-0009-数据库连接CommonAction落地.md  计划-0010-数据库真实服务回归与扩展优化.md  计划-0011-数据库分页与生态扩展.md  计划-0012-真实数据库回归与本机配置落地.md  计划-0013-数据库驱动按需安装与生态扩展策略.md  计划-0014-Excel文件与表格处理落地.md  计划-0014-SQL复制同步与DuckDB本地分析落地.md  计划-0015-SQL复制分批Stream处理落地.md  计划-0016-数据库生态SQLServerMongoInspect增强.md  计划-0016-数据库生态SQLServerMongoInspect增强.summary.md  计划-0017-数据库导入导出与Mongo索引增强.md  计划-0017-数据库导入导出与Mongo索引增强.summary.md  计划模板.md
docs/refactors/: README.md  重构-0001-从单脚本到编排引擎.md  重构模板.md
docs/study/: 分发包使用指南.md  快速使用指南.md  打包发布指南.md
examples/: README.md
examples/data/: sample_lines.txt
handbook/: README.md  accept_dialog.md  ai.md  append_text.md  assert_count.md  assert_selector.md  assert_text.md  assert_url_contains.md  assert_value.md  browser-capability-roadmap.md  capture.md  check.md  clear.md  click.md  close_page.md  config.md  copy_variable.md  dismiss_dialog.md  dump_variables.md  extract_all_texts.md  extract_all_values.md  extract_attribute.md  extract_count.md  extract_html.md  extract_nth_text.md  extract_table.md  extract_text.md  extract_value.md  fill.md  focus.md  foreach.md  go_back.md  go_forward.md  goto.md  hover.md  if.md  keyboard_down.md  keyboard_press.md  keyboard_type.md  keyboard_up.md  (+53 more)
handbook/actions/: README.md
handbook/browser/: README.md
handbook/desktop/: README.md
handbook/reference/: config.md  schedule.md
output/examples/: assert-and-extract.variables.json  extract-table.json  load-csv.variables.json  load-json-and-loop.variables.json  load-txt.variables.json  login-page.html  write-csv.csv  (+7 more)
plans/: config.json
scripts/: package-macos.sh  package.ps1
test-plans/: README.md  config.json
(+582 files in other folders)
