[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automate-contro"
version = "0.1.0"
description = "JSON plan automation kernel built with Python and Playwright."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright==1.59.0",
  "openai>=2.36.0,<3.0.0",
  "jsonschema==4.26.0",
  "langchain==1.2.18",
  "langgraph==1.1.10",
  "langgraph-checkpoint-sqlite==3.0.3",
  "langchain-openai==1.2.1",
  "typing_extensions>=4.15.0",
  "pydantic>=2.13.4",
  "Pillow>=11.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "rich>=13.9.4,<16.0.0",
  "textual>=8.2.0,<9.0.0",
]

[project.optional-dependencies]
desktop = [
  "pyautogui>=0.9.54,<1.0.0",
  "pyperclip>=1.9.0,<2.0.0",
  "mss>=10.0.0,<11.0.0",
  "opencv-python>=4.10.0,<5.0.0",
  "pywinauto>=0.6.8,<1.0.0; sys_platform == 'win32'",
]
# Database drivers are optional by design. The default install must not pull
# service-specific clients; users install only the drivers they actually need.
db-postgresql = [
  "psycopg[binary]>=3.2.0,<4.0.0",
]
db-mysql = [
  "PyMySQL>=1.1.0,<2.0.0",
]
db-redis = [
  "redis>=5.0.0,<7.0.0",
]
db-oracle = [
  "oracledb>=4.0.0,<5.0.0",
]
db-duckdb = [
  "duckdb>=1.1.0,<2.0.0",
]
database-local = [
  "duckdb>=1.1.0,<2.0.0",
]
database-sql = [
  "psycopg[binary]>=3.2.0,<4.0.0",
  "PyMySQL>=1.1.0,<2.0.0",
  "oracledb>=4.0.0,<5.0.0",
  "duckdb>=1.1.0,<2.0.0",
]
database-basic = [
  "psycopg[binary]>=3.2.0,<4.0.0",
  "PyMySQL>=1.1.0,<2.0.0",
  "redis>=5.0.0,<7.0.0",
]
database-all = [
  "psycopg[binary]>=3.2.0,<4.0.0",
  "PyMySQL>=1.1.0,<2.0.0",
  "redis>=5.0.0,<7.0.0",
  "oracledb>=4.0.0,<5.0.0",
  "duckdb>=1.1.0,<2.0.0",
]
package = [
  "pyinstaller>=6.20.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aic = "ai_automate_contro.app.entrypoints:main"
cplan = "ai_automate_contro.app.entrypoints:cplan"
